--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -4,6 +4,14 @@
    box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+    font-family: 'Raleway', sans-serif;;
+}
+body {
+    font-size: 1.4rem;
+}
+
 img {
    max-width: 100%;
 }
